--- a/templates/StudentRegistration.html
+++ b/templates/StudentRegistration.html
@@ -3,78 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pensamiento Algorítmico</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
+    <title>Registro</title>
     <style>
+        :root{
+            --blue: #1F57A2;
+            --white: #FFFFFF;
+            --gray: #CFCDC8;
+            --black: #000000;
+            --gold: #F5C451;
+            --sm: 14px;
+            --md: 16px;
+            --lg: 24px;
+            --g: 28px;
+        }
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            text-align: center;
+            background-color: var(--blue);
+            font-family: 'Space Grotesk', sans-serif;
             margin: 0;
-            padding: 0;
         }
-
-        #titulo {
-            font-size: 24px;
-            margin-top: 20px;
+        .register {
+            width: 100%;
+            height: 100vh;
+            display: grid;
+            place-items: center;
         }
-
-        #registro-formulario {
-            width: 300px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        .form_container {
+            background-color: white;
+            display: grid;
+            grid-template-rows: auto 1fr auto;
+            width: 400px;
+            border-radius: 16px;
+            
         }
-
-        label {
-            display: block;
-            text-align: left;
-            margin-bottom: 5px;
+        .title{
+           font-size: var(--g); 
+           color: var(--blue);
+           margin-bottom: 12px;
+           text-align: center;
         }
-
-        input[type="text"],
-        input[type="email"],
-        input[type="password"] {
-            width: 90%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        .form{
+            display: flex;
+            flex-direction: column;
         }
-
-        button {
-            background-color: #007BFF;
-            color: #fff;
-            padding: 10px 20px;
+        .label{
+            margin-left: 16px;
+            color: var(--blue);
+            font-size: var(--sm);
+            font-weight: bold;
+            margin-bottom: 12px;
+            margin-top: 16px;
+        }
+        .input{
+            color: var(--white);
+            background-color: var(--blue);
+            border-radius: 12px;
             border: none;
-            border-radius: 5px;
-            cursor: pointer;
+            height: 24px;
+            font-size: var(--md);
+            padding: 8px;
+            margin-left: 16px;
+            margin-right: 16px;
+            outline: none;
         }
+        .input::placeholder{
+            color: var(--white);
+        }
+        .primary-button {
+            font-size: var(--md);
+            background-color: var(--gold);
+            border-radius: 12px;
+            border: none;
+            height: 40px;
+            color: var(--white);
+            margin-top: 16px;
+            margin-left: 16px;
+            margin-right: 16px;
+            cursor: pointer;
+            
 
-        button:hover {
-            background-color: #0056b3;
+        }
+        .register-button{
+            background-color: var(--gold);
+            color: var(--white);
+            margin-bottom: 16px;
         }
     </style>
 </head>
 <body>
-    <div id="titulo">Pensamiento Algorítmico</div>
-    <div id="subtitulo"> Registrate! </div>
+    <div class = "register">
+        <div class = "form_container"> 
+            <h1 class="title">Registro</h1>
+            <form id="registro-formulario" action="/StudentRegistration" method="POST" class="form form-register">
+            <label for="name"  class="label" >Nombre:</label>
+            <input type="text" id="name" name="nameStudent" required class= "input input-name" placeholder="Nombre">
 
-    <form id="registro-formulario" action="/StudentRegistration" method="POST">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nameStudent" required>
+            <label for="lastname" class="label">Apellido:</label>
+            <input type="text" id="lastname" name="lastNameStudent" required class = "input input-lastname" placeholder="Apellidos">
 
-        <label for="apellido">Apellido:</label>
-        <input type="text" id="apellido" name="lastNameStudent" required>
+            <label for="mail"  class="label">Correo:</label>
+            <input type="email" id="mail" name="emailStudent" required class = "input input-email" placeholder="Correo Electrónico">
 
-        <label for="correo">Correo:</label>
-        <input type="email" id="correo" name="emailStudent" required>
+            <label for="password"  class="label">Contraseña:</label>
+            <input type="password" class="input input-password" placeholder="Contraseña" id="password" name="passwordStudent" required>
 
-        <label for="contrasena">Contraseña:</label>
-        <input type="password" id="contrasena" name="passwordStudent" required>
-
-        <button type="submit">Registrarse</button>
-    </form>
+            <button type="submit" class="primary-button register-button">Registrarse</button>
+        </form>
+        </div>
+    </div>
+        
 </body>
 </html>
