--- a/templates/Index.html
+++ b/templates/Index.html
@@ -102,7 +102,7 @@
     </style>
 </head>
 <body>
-    <div class="notification">
+    <div class="notification"> >
         {% if message %}
         <p>{{ message }}</p>
         {% endif %}
