1 Se creo el "todo" de actividades donde posteriormente se encontraran los ejercicios, además se incorporaron los requisitos de "edit" y "delete" de Actividades.
2. Se desarrollo la clase Theme y se expandieron las demás con sus diferentes necesidades

--- a/templates/HomeMenu_forActivityTeacher.html
+++ b/templates/HomeMenu_forActivityTeacher.html
@@ -27,7 +27,6 @@
         {% for todo in Actividades %}
         <li>
             <span {%if todo[done] %} style="text-decoration: line-through" {%endif %}>{{ todo["task"] }}</span>
-            <a href="{{ url_for('go', Menu=loop.index0)}}">⏩</a>
             <a href="{{ url_for('edit', Menu=loop.index0)}}">Edit</a>
             <a href="{{ url_for('delete', Menu=loop.index0)}}">Delete</a>
         </li>
@@ -53,6 +52,11 @@
                 <button type="submit">Calificar</button>
             </form>
         </div>
+    </div>
+    <div id="create-exercise">
+        <form action="/CreateExerciseView">
+            <button type="submit">Crear Ejercicio</button>
+        </form>
     </div>
 </body>
 </html>
