--- a/templates/HomeMenuTeacher.html
+++ b/templates/HomeMenuTeacher.html
@@ -2,73 +2,174 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pensamiento Algorítmico</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
-        /* Estilos para el diseño deseado */
-        #content {
+        :root{
+            --blue: #1F57A2;
+            --white: #FFFFFF;
+            --gray: #CFCDC8;
+            --black: #000000;
+            --gold: #F5C451;
+            --sm: 14px;
+            --md: 16px;
+            --lg: 24px;
+        }
+        body {
+            background-color: var(--blue);
+            font-family: 'Space Grotesk', sans-serif;
+            margin: 0;
             display: flex;
-            flex-direction: row;
-            align-items: flex-start;
+        }
+        .menu_teacher_left {
+            width: 400px;
+            background-color: var(--white);
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            place-items:left;
+            border-radius: 12px;
+        }
+        
+        .logo {
+            width: 300px;
+            margin: 0 ;
+            margin-bottom: 12px;
+            border-radius: 8px;
+
+        }
+        .title{
+           font-size: var(--lg);
+           color: var(--blue);
+           margin-bottom: 16px;
+           margin-left: 12px;
+           text-align: left;
         }
 
-        .sidebar {
-            flex: 1;
-            padding: 20px;
-            background-color: #f0f0f0; /* Color de fondo de la barra lateral */
+li{
+    list-style: none;
+    margin-left: 20px;
+    display: flex; 
+    align-items: left; 
+    margin-bottom: 16px; 
+    
+    
+}
+.mini-icon{
+    width: 32px; 
+    height: 32px; 
+    margin-right: 0px;
+    margin-left: 8px;
+    margin-bottom: 8px;
+    cursor: pointer;
+}
+.code{
+    width: 20px; 
+    height: 20px; 
+    margin-right: 12px;
+}
+.menu_teacher_right{
+     display: flex;
+    justify-content: center;
+     width: 100%;
+}
+.input{
+            color: var(--blue);
+            background-color: var(--gray);
+            border-radius: 12px;
+            border: none;
+            height: 16px;
+            font-size: var(--md);
+            padding: 8px;
+            margin-left: 16px;
+            margin-right: 16px;
+            outline: none;
+        }
+        
+        .primary-button-right {
+            font-size: var(--lg);
+            background-color: var(--white);
+            border-radius: 12px;
+            margin-top: 0;
+            margin-left: 4px;
+            margin-right: 4px;
+            border: none;
+            height: 64px;
+            width: 252px;
+            color: var(--blue); 
+            cursor: pointer;
+            
+
+        }
+        .primary-button {
+            font-size: var(--md);
+            background-color: var(--blue);
+            border-radius: 12px;
+            border: none;
+            height: 32px;
+            color: var(--white);
+            margin-left: 16px;
+            margin-right: 16px;
+            margin-bottom: 16px;
+            margin-top: 8px;
+            cursor: pointer;
+            
+
+        }
+        .form-add{
+            display: flex;
+            flex-direction: column;
         }
 
-        .menu-item {
-            margin-bottom: 10px; /* Espacio entre elementos del menú */
-        }
-
-        .main-content {
-            flex: 2;
-            padding: 20px;
-        }
-
-        #create-exercise {
-            margin-top: 20px; /* Espacio debajo de "Actividades" */
-        }
     </style>
 </head>
 <body>
-    <h1>Pensamiento Algorítmico</h1>
-    <div id="content">
-        <div class="sidebar">
-            <h2>Temas de Estudio</h2>
-            <ul>
+<div class="menu_teacher_left">
+     <img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo">
+            <h2 class = "title">Temáticas : </h2>
                 {% for todo in Actividades %}
                 <li>
+                    <img src="{{ url_for('static', filename='code.png') }}" class="code">
                     <span {% if todo[done] %} style="text-decoration: line-through" {% endif %}>{{ todo["task"] }}</span>
-                    <a href="{{ url_for('go', Menu=loop.index0, actividad=todo['task']) }}">⏩</a>
-                    <a href="{{ url_for('edit', Menu=loop.index0) }}">Edit</a>
-                    <a href="{{ url_for('delete', Menu=loop.index0) }}">Delete</a>
+                    <a  href="{{ url_for('go', Menu=loop.index0, actividad=todo['task']) }}">
+                        <img src="{{ url_for('static', filename='go.png') }}" class="mini-icon go">
+                    </a>
+                    <a href="{{ url_for('edit', Menu=loop.index0) }}">
+                        <img  src="{{ url_for('static', filename='edit.png') }}"  class=" mini-icon pencil">
+                    </a>
+                
+                    <a href="{{ url_for('delete', Menu=loop.index0) }}">
+                        <img  src="{{ url_for('static', filename='delete.png') }}" href="{{ url_for('edit', Menu=loop.index0) }}" class=" mini-icon delete">
+                    </a>
                 </li>
                 {% endfor %}
-            </ul>
-            <form action="{{ url_for('add') }}" method="post">
-                <input type="text" name="todo">
-                <button type="submit">Add Todo</button>
+            <form class="form-add" action="{{ url_for('add') }}" method="post">
+                <input type="text" name="todo" class="input input-add-list">
+                <button type="submit" class="primary-button">Añadir Temática</button>
             </form>
         </div>
-        <div class="main-content">
+        <div class="menu_teacher_right">
             <div class="menu-item">
                 <form action="/HomeMenuTeacher">
-                    <button type="submit">Actividades</button>
+                    <button  class= "primary-button-right" type="submit">Actividades</button>
                 </form>
             </div>
             <div class="menu-item">
                 <form action="/RankingView">
-                    <button type="submit">Ranking</button>
+                    <button  class= "primary-button-right" type="submit">Ranking</button>
                 </form>
             </div>
             <div class="menu-item">
                 <form action="/QualifyView">
-                    <button type="submit">Calificar</button>
+                    <button class= "primary-button-right" type="submit">Calificar</button>
                 </form>
             </div>
         </div>
     </div>
+</div>
+
 </body>
 </html>
 
