--- a/templates/SelectCourseView.html
+++ b/templates/SelectCourseView.html
@@ -5,24 +5,26 @@
     <title>Title</title>
 </head>
 <body>
-        <h1>Pensamiento Algorítmico</h1>
+    <h1>Python Hunters</h1>
     <div id="content">
         <div class="sidebar">
-            <h2>Temas de Estudio</h2>
+            <h2>Cursos</h2>
             <ul>
                 {% for todo in Courses %}
                 <li>
                     <span {% if todo[done] %} style="text-decoration: line-through" {% endif %}>{{ todo["task"] }}</span>
-                    <a href="{{ url_for('goCourse', Menu=loop.index0,current_course=todo['task']) }}">⏩</a>
+                    <a href="{{ url_for('goCourse', Menu=loop.index0, current_course=todo['task']) }}">⏩</a>
                     <a href="{{ url_for('edit', Menu=loop.index0) }}">Edit</a>
                     <a href="{{ url_for('delete', Menu=loop.index0) }}">Delete</a>
                 </li>
                 {% endfor %}
             </ul>
-            <form action="{{ url_for('add') }}" method="post">
+            <form action="{{ url_for('addCourse') }}" method="post">
                 <input type="text" name="todo">
                 <button type="submit">Add Todo</button>
             </form>
         </div>
+    </div>
+
 </body>
 </html>
