--- a/templates/HomeMenu_forActivityTeacher.html
+++ b/templates/HomeMenu_forActivityTeacher.html
@@ -16,7 +16,7 @@
                 {% for todo in Actividades %}
                 <li>
                     <span {% if todo[done] %} style="text-decoration: line-through" {% endif %}>{{ todo["task"] }}</span>
-                    <a href="{{ url_for('go', Menu=loop.index0, actividad=todo['task']) }}">⏩</a>
+                    <a href="{{ url_for('go', Menu=loop.index0, actividad=todo['task'],nameCourse=nameCourse) }}">⏩</a>
                     <a href="{{ url_for('edit', Menu=loop.index0) }}">Edit</a>
                     <a href="{{ url_for('delete', Menu=loop.index0) }}">Delete</a>
                 </li>
@@ -49,6 +49,7 @@
             <div id="create-exercise">
                 <form action="/CreateExerciseView" method="GET">
                     <input type="hidden" name="nameActivity" value="{{ nameActivity }}">
+                    <input type="hidden" name="nameCourse" value="{{ nameCourse }}">
                     <button type="submit">Crear Ejercicio</button>
                 </form>
             </div>
